aux: updated openapi.json
