# src/app/rest/model/event-term-event-term.ts
@@ -1,0 +1,26 @@
+/**
+ * OpenAPI definition
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { EventEventTermDTO } from './event-event-term';
+import { RegistrationEventTermDTO } from './registration-event-term';
+import { EventTermCapacityEventTermDTO } from './event-term-capacity-event-term';
+
+
+export interface EventTermEventTermDTO { 
+    id?: number;
+    startAt?: string;
+    endAt?: string;
+    capacity: number;
+    deposit: number;
+    price: number;
+    event?: EventEventTermDTO;
+    registrations?: Array<RegistrationEventTermDTO>;
+    currentCapacities?: Array<EventTermCapacityEventTermDTO>;
+}
+
