# src/app/rest/model/models.ts
@@ -1,18 +1,31 @@
 export * from './enumeration-item-public';
 export * from './event';
-export * from './event-internal';
+export * from './event-event-internal';
+export * from './event-event-public';
+export * from './event-event-term';
 export * from './event-public';
 export * from './event-term-capacity';
-export * from './event-term-capacity-internal';
+export * from './event-term-capacity-event-internal';
+export * from './event-term-capacity-event-term';
 export * from './event-term-capacity-response-public';
 export * from './event-term';
-export * from './event-term-internal';
+export * from './event-term-event-internal';
+export * from './event-term-event-public';
+export * from './event-term-event-term';
 export * from './event-term-public';
 export * from './generic-error';
 export * from './generic-request-string-public';
 export * from './generic-response-string';
+export * from './known-person';
+export * from './known-person-event-term';
 export * from './known-person-public';
+export * from './payment';
+export * from './payment-event-term';
 export * from './payment-public';
+export * from './person';
+export * from './person-event-term';
 export * from './person-public';
+export * from './registration';
+export * from './registration-event-term';
 export * from './registration-pricing-request-public';
 export * from './registration-public';
